# prelegal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: pyproject.toml
backend/src/prelegal/: config.py  main.py
backend/src/prelegal/database/: engine.py  init_db.py
backend/src/prelegal/models/: __init__.py  user.py
backend/src/prelegal/routers/: chat.py  health.py
backend/tests/: conftest.py  test_chat.py  test_db.py  test_health.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatNDA.tsx  NDACreator.tsx
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
